Fix max width on mobile

--- a/apps/web/styles/tailwind/tailwind.css
+++ b/apps/web/styles/tailwind/tailwind.css
@@ -21,12 +21,6 @@
   margin-bottom: 0.5rem;
 }
 
-@media only screen and (max-width: 600px) {
-  [data-rehype-pretty-code-title] {
-      max-width: 327px;
-  }
-}
-
 [data-rehype-pretty-code-title] {
     @apply -mb-5 font-mono text-sm;
   }
